Fix layout shifts when hovering TemperatureSlice's

--- a/src/assets/root.scss
+++ b/src/assets/root.scss
@@ -30,10 +30,17 @@ a {
 	background-color: transparent;
 }
 
+html,
+body {
+	height: 100%;
+}
+
 body {
 	margin: 0;
+	display: flex;
+	flex-direction: column;
 	min-width: 320px;
-	min-height: 100vh;
+	min-height: 600px;
 
 	font-family: "Zed", sans-serif;
 	line-height: 1.5;
@@ -47,5 +54,23 @@ body {
 }
 
 #root {
+	flex: 1;
 	padding: 40px;
+}
+
+//todo to own file
+.months {
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	border: 2px solid var(--black);
+	box-shadow: var(--box-shadow--alt);
+	.temperature-slice {
+		flex: 1;
+		aspect-ratio: unset;
+		// transition: 200ms;
+		&:hover {
+			scale: 1.025 1.25;
+		}
+	}
 }
